Form and resume uploading sucessfully!